# AI-Assisted_Implementation_of_a_Digital-Twin

./: Check_csv_Files.py  CreateDataset.py  GenerateExp_FromTemplate.py  README.md  environment.yml
Digital_Twin_Calibration/: .gitignore  README.md  env_deep_learning.yml  pyproject.toml  run_calibration_cv.py
Digital_Twin_Calibration/.github/workflows/: ci.yml
Digital_Twin_Calibration/data/LP_Dataset_csv_C_Modified/: README.md
Digital_Twin_Calibration/results/: results1.txt
Digital_Twin_Calibration/scripts/: run_calibration_cv.py
Digital_Twin_Calibration/src/dtcalib/: calibration.py  data.py  metrics.py  simulation.py  validation.py
Digital_Twin_Calibration/src/dtcalib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Digital_Twin_Calibration/src/dtcalib/deep_learning/: dataset.py  inference.py  make_split.py  model.py  splits_utils.py  train.py
Digital_Twin_Calibration/src/dtcalib/deep_learning/models/: rc_inverse_best_2026-02-23_15-56-57.pth
Digital_Twin_Calibration/src/dtcalib/deep_learning/splits/: rc_split_seed42_70_15_15.json
Digital_Twin_Calibration/src/dtcalib/iterated_racing/: README.md  config.py  evaluator.py  iterated_racing.py  logger.py  run.py  sampler.py  statistical_tests.py  train.py
Digital_Twin_Calibration/src/dtcalib/search/: sampler.py  search_space.py
Digital_Twin_Calibration/tests/: test_calibration.py  test_data_loading.py  test_dataset.py  test_evaluator.py  test_iterated_racing.py  test_logger.py  test_metrics.py  test_run_wiring.py  test_sampler.py  test_simulation.py  test_statistical_tests.py  test_validation.py
(+606 files in other folders)
