[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dtcalib"
version = "0.1.0"
description = "Digital Twin Calibration Framework"
authors = [
    { name = "Theo", email = "theodesoil@gmail.com" }
]
dependencies = [
    "numpy",
    "pandas",
    "scipy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
